--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,15 @@
 
     <com.khusainov.rinat.customview.FinanceProgressView
         android:id="@+id/finance_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:padding="@dimen/paddingMedium"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center" />
+
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/paddingMedium"/>
 
 </FrameLayout>
