--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_text_size">32sp</dimen>
+    <dimen name="default_stroke_width">16dp</dimen>
+    <dimen name="paddingMedium">16dp</dimen>
 </resources>
