--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,10 @@
 
 
     <style name="FinanceProgressDefaultStyle">
-        <item name="android:color">@color/colorPrimary</item>
+        <item name="color">@color/colorAccent</item>
+        <item name="backCircleColor">@color/colorBackCircle</item>
+        <item name="textSize">@dimen/default_text_size</item>
+        <item name="strokeWidth">@dimen/default_stroke_width</item>
     </style>
 
 </resources>
